# AgentsVille-Trip-Planner

./: .gitignore  README.md  agents.py  analyze_react_improvements.py  compare_notebooks.py  config.env.example  detailed_analysis.py  evaluations.py  file_summary.py  final_react_report.py  final_report.py  main.py  models.py  project_lib.py  project_starter.ipynb  project_starter_development_1.ipynb  project_starter_development_corrected.ipynb  project_starter_local.ipynb  project_starter_on_revision_react_improved.ipynb  project_starter_on_revision_structured_output.ipynb  project_starter_v1.ipynb  pyproject.toml  requirements.txt  tools.py
.github/workflows/: ci.yml
docs/: EXECUCAO_RAPIDA.md  GUIA_SUBMISSAO.md  ai_agent_planner_project_instructions.txt
tests/: test_tools_and_evals.py
