[project]
name = "agentsville-trip-planner"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=7.0.1",
    "json-repair==0.47.1",
    "nbformat>=5.10.4",
    "numexpr==2.11.0",
    "openai==1.74.0",
    "pandas==2.3.0",
    "pydantic==2.11.7",
    "python-dotenv==1.1.0",
]
